Avoid overlap of debug bar and wikitext warning

--- a/modules/editor/editors/visualeditor/mw.flow.ve.Target.less
+++ b/modules/editor/editors/visualeditor/mw.flow.ve.Target.less
@@ -36,6 +36,11 @@
 		position: relative;
 	}
 
+	.ve-ui-surface-source .ve-ui-debugBar {
+		// Avoid collision with wikitext message
+		padding-bottom: 1.5em;
+	}
+
 	.ve-ui-overlay {
 		line-height: normal;
 	}
